# linux-utilities

./: .coverage  .gitignore  .prompt.swp  AGENTS.md  Dockerfile  README.md  ab  ab-config  ab-git  ab-prompt  ab-util  ab.bash-completion  auto-commit  auto_commit.py  ideia.txt  install.sh  passgenerator  pr-description  pr_description.py  project-manager  prompt  prompt.py  pyproject.toml  requirements.txt  rewrite-history  rewrite_history.py
.github/workflows/: lint.yml  tests.yml
completions/: ab.bash-completion
lib/: __init__.py  ab_config.py
pm/: __init__.py
pm/ai/: __init__.py  agent.py  agent_planner.py  json_dumps.py  plan_generator.py  printer.py  prompts.py  session.py  tools.py
pm/ai/prompts/: planner.md
pm/cli/: __init__.py  commands.py  formatters.py  interactive.py
pm/core/: __init__.py  config.py  plan.py  task.py  validator.py
pm/utils/: __init__.py  helpers.py  logger.py
scripts/: passgenerator
src/ab_cli/: __init__.py
src/ab_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ab_cli/commands/: __init__.py  auto_commit.py  branch_name.py  changelog.py  config_cli.py  explain.py  gen_script.py  models.py  pr_description.py  prompt.py  resolve_conflict.py  rewrite_history.py
src/ab_cli/core/: __init__.py
src/ab_cli/utils/: __init__.py  error_handling.py  exceptions.py  git_helpers.py  llm_helpers.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_auto_commit.py  test_branch_name.py  test_changelog.py  test_explain.py  test_gen_script.py  test_pr_description.py  test_prompt.py  test_resolve_conflict.py  test_rewrite_history.py
tests/unit/: __init__.py  test_config.py  test_config_cli.py  test_error_handling.py  test_exceptions.py  test_logging.py  test_models.py  test_utils.py
